--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/print.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/print.scss
@@ -22,7 +22,7 @@ body {
 	font-size: 12pt;
 	line-height: 1.7;
 	font-weight: normal;
-	color: $black-03;
+	color: $dark-03;
 }
 
 h1, h2, h3, h4, h5, h6, p, figure, dl, hr, blockquote, .content, .page-number, .codebox {
