--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_profile.scss
@@ -98,7 +98,7 @@
 		position: relative;
 		height: 20px;
 		border: 2px solid;
-		box-shadow: inset 0 0 6px 3px $dark-rgb-09;
+		box-shadow: inset 0 0 6px 3px map-get($dark-set, dark-08);
 		border-radius: 3px;
 		margin: 0 0 5px 0;
 		.stat-bar-inner {
@@ -108,22 +108,22 @@
 			@include position($type: absolute, $bottom: -8.5px, $left: 0, $right: 0);
 			line-height: 1;
 			text-align: center;
-			text-shadow: 1px 1px 0 $dark-rgb-10, 2px 2px 0 $dark-rgb-10;
+			text-shadow: 1px 1px 0 map-get($dark-set, dark-09), 2px 2px 0 map-get($dark-set, dark-09);
 			@include spectral-common;
 		}
 		& + .stat-bar {
 			margin-top: 15px;
 		}
 		&.hp-bar {
-			border-color: $dark-mix-11;
-			background: $dark-mix-12;
+			border-color: map-get($color-set-15, dark-00);
+			background: map-get($color-set-15, dark-00);
 			.stat-bar-inner {
 				background: $color-15;
 			}
 		}
 		&.mp-bar {
-			border-color: $dark-mix-09;
-			background: $dark-mix-10;
+			border-color: map-get($color-set-14, dark-00);
+			background: map-get($color-set-14, dark-01);
 			.stat-bar-inner {
 				background: $color-14;
 			}
@@ -159,7 +159,7 @@
 .online {
 	position: relative;
 	&:before, &:after {
-		color: $white-05;
+		color: $light-05;
 		display: block;
 		@include position($type: absolute, $z: 10);
 	}
@@ -174,13 +174,13 @@
 		line-height: 0;
 		padding: 0 10px;
 		text-align: center;
-		box-shadow: 0 8px 6px -6px $dark-rgb-05;
+		box-shadow: 0 8px 6px -6px map-get($dark-set, dark-04);
 	}
 	&:after {
 		content: '';
 		@include sizing(0, 0);
 		border-left: 12px inset transparent;
-		border-top: 8px solid $dark-mix-06;
+		border-top: 8px solid map-get($color-set-05, dark-03);
 	}
 }
 
@@ -206,7 +206,7 @@
 	}
 	&:before {
 		top: 15px;
-		box-shadow: 0 8px 6px -6px $dark-rgb-00;
+		box-shadow: 0 8px 6px -6px map-get($dark-set, dark-00);
 	}
 	&:after {
 		top: 39px;
