--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_variables.scss
@@ -2,8 +2,7 @@
 // ============================================== //
 
 $assets: '../theme';
-$assets2: '../../../styles/khyeras_v1/theme';
-$fonts: $assets2 + '/fonts/';
+$fonts: $assets + '/fonts/';
 $images: $assets + '/images/';
 $phpbb-images: '../../../images/content/';
 
