--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_colors.scss
@@ -1,103 +1,123 @@
 // Main Colors
 // ============================================== //
 
-$color-00: #4b4b4b; // *** very light gray
-$color-01: #a7b7b8; // *** very dark blue
-$color-02: #869293; // *** very dark blue
-$color-03: #7ea8c2; // blue
-$color-04: #a4c27e; // green
-$color-05: #1c2f25; // dark green
-$color-06: #333333; // blackish
-$color-07: #fcfcce; // pale yellow
-$color-08: #b30832; // red
-$color-09: #777777; // gray
-$color-10: #aaaaaa; // gray
-$color-11: #f0a06a; // orange
-$color-12: #5e6c85; // blue gray
-$color-13: #591818; // red
-$color-14: #266296; // blue
-$color-15: #962626; // red
-$color-16: #ad7337; // orange
-$color-17: #ae973f; // yellow
-$color-18: #4d2e56; // purple
-$color-19: #666666; // gray
-$color-20: #67e5e2; // bright blue
+$color-00: #5a6263; // *** main font
+$color-01: #c8d7d8; // *** form headers, footer, image borders, read icon, button hover
+$color-02: #dfe7e8; // *** mobile menu, sticky nav, dropdown containers, attachbox, pre/code
+$color-03: #8ea76f; // *** main link hover, sub-headers, icon-blue
+$color-04: #7097af; // *** main link, icon-green
+$color-05: #7097af; // *** buttons, tabs, rpg icon green, online ribbon, unread icon, poll bar
+$color-06: #333333; // *** form fields fonts, notice/error font
+$color-07: #fcfcce; // *** browser upgrade, highlight, notices
+$color-08: #b13131; // *** notify badge, icon-red, rpg icon red, hot icon, chart remove, hp bar inner
+$color-09: #266296; // *** half-breed chart check, mp bar inner
+$color-10: #777777; // *** search-box icon, icon-gray
+$color-11: #aaaaaa; // *** disabled form field, search-box icon hover
+$color-12: #f19051; // *** icon-orange, star topic icon, rpg icon orange
+$color-13: #5e6c85; // *** icon-bluegray
+$color-14: #e8d261; // *** rpg icon yellow
+$color-15: #4d2e56; // *** rpg icon purple
+$color-16: #666666; // *** print.css main color
+$color-17: #73abd0; // *** topic mention, user colors
 
-// White Colors
+// Color Sets
 // ============================================== //
 
-$white-00: #ffffff; // rgb and mixes
-$white-01: #ffffff; // forum headers, notification headers
-$white-02: #ffffff; // footer
-$white-03: #ffffff; // icons - alert, scroll, forum
-$white-04: #ffffff; // input fields
-$white-05: #ffffff; // button text, badge text, tabs, ribbon text
-$white-06: #ffffff; // header text
-$white-07: #ffffff; // mobile menu text
+$white: #ffffff;
+$black: #000000;
 
-// Black Colors
+$color-set-00: (
+	light-00 : $color-00 // *** optional nav color
+);
+
+$color-set-01: (
+	light-00 : mix($black, $color-01, 5%), // *** rpg icon border, read icon border
+	dark-00  : mix($white, $color-01, 60%) // *** mobile menu border, sticky logo border
+);
+
+$color-set-02: (
+	rgb-00  : rgba($color-02, .75), // *** navbar
+	dark-00 : mix($black, $color-02, 5%) // *** mobile menu label background
+);
+
+$color-set-03: (
+	light-00 : mix($white, $color-03, 60%) // *** question icon, unapproved/post-blue, rules
+);
+
+$color-set-05: (
+	light-00 : mix($black, $color-05, 5%), // *** rpg green icon border, unread icon border
+	light-01 : mix($white, $color-05, 10%), // *** pollbar5, file progress
+	dark-00  : mix($black, $color-05, 10%), // *** pollbar3
+	dark-01  : mix($black, $color-05, 20%), // *** pollbar2
+	dark-02  : mix($black, $color-05, 30%), // *** pollbar1
+	dark-03  : mix($black, $color-05, 35%), // *** online ribbon shadow
+);
+
+$color-set-07: (
+	dark-00 : mix($black, $color-07, 10%) // *** browser upgrade border
+);
+
+$color-set-08: (
+	light-00 : mix($black, $color-08, 5%), // *** rpg red icon border, hot icon border
+	light-01 : mix($white, $color-08, 60%), // *** register error, exclamation icon, reported/post-red
+	dark-00  : mix($black, $color-08, 33.33%), // *** hp bar border
+	dark-01  : mix($black, $color-08, 50%), // *** hp bar background
+);
+
+$color-set-11: (
+	dark-00 : mix($black, $color-11, 40%) // *** disabled field text
+);
+
+$color-set-12: (
+	light-00 : mix($black, $color-12, 5%) // *** rpg orange icon border
+);
+
+$color-set-09: (
+	dark-00 : mix($black, $color-09, 33.33%), // *** mp bar border
+	dark-01 : mix($black, $color-09, 50%) // *** mp bar background
+);
+
+$color-set-14: (
+	light-00 : mix($black, $color-14, 5%) // *** rpg yellow icon border
+);
+
+$color-set-15: (
+	light-00 : mix($black, $color-15, 5%) // *** rpg purple icon border
+);
+
+// Light Colors
 // ============================================== //
 
-$black-00: #000000; // rgb and mixes
-$black-01: #000000; // form fields
-$black-02: #000000; // color palette table
-$black-03: #000000; // print body color
+$light-00: #ffffff; // *** rgb and mixes
+$light-01: #5a6263; // *** forum headers, notification headers
+$light-02: #5a6263; // *** footer
+$light-03: #ffffff; // *** icons - alert, scroll, forum, chart text, pollbar text, stat bar text
+$light-04: #ffffff; // *** input fields
+$light-05: #ffffff; // *** button text, badge text, tabs, ribbon text
+$light-06: #ffffff; // *** header text
+$light-07: #5a6263; // *** mobile menu text
 
-// Light RGB
+// Dark Colors
 // ============================================== //
 
-$light-rgb-00: rgba($white-00, 0.00); // webkit highlight
+$dark-00: #000000; // *** rgb and mixes
+$dark-01: #000000; // *** field placeholder
+$dark-02: #eef1f2; // *** color palette table
+$dark-03: #000000; // *** print body color
 
-// Dark RGB
-// ============================================== //
-
-$dark-rgb-00: rgba($black-00, 0.15); // cp avatar shadow, cp ribbon shadow
-$dark-rgb-01: rgba(#c8d5d6, 0.20); // *** main box background
-$dark-rgb-03: rgba($black-00, 0.20); // cp postbody, attachbox, pre/code, big-column
-$dark-rgb-04: rgba($black-00, 0.25); // stick nav shadow
-$dark-rgb-05: rgba($black-00, 0.25); // avatar shadow, ribbon shadow
-$dark-rgb-06: rgba($black-00, 0.30); // divider shadow
-$dark-rgb-07: rgba(#c8d5d6, 0.30); // *** main box border
-$dark-rgb-08: rgba($black-00, 0.35); // mobile menu shadow
-$dark-rgb-09: rgba($black-00, 0.40); // stat bar box shadow
-$dark-rgb-10: rgba($black-00, 0.40); // stat bar text shadow
-$dark-rgb-10: rgba($black-00, 0.50); // darken overlay, discord reactions
-$dark-rgb-11: rgba(#c8d5d6, 0.60); // *** featured overlay, black-bar, banner-content
-$dark-rgb-12: rgba($black-00, 0.65); // header text shadow
-$dark-rgb-13: rgba($black-00, 0.65); // loading indicator
-$dark-rgb-14: rgba($black-00, 0.75); // header dark text shadow
-
-// Other RGB
-// ============================================== //
-
-$other-rgb-00: rgba($color-02, 0.75); // navbar
-$other-rgb-01: rgba($color-02, 1.00); // sticky nav
-
-// Light Mixes
-// ============================================== //
-
-$light-mix-01: mix($white-00, $color-01, 05.00%); // very dark blue
-$light-mix-02: mix($white-00, $color-03, 60.00%); // blue
-$light-mix-03: mix($white-00, $color-05, 05.00%); // dark green
-$light-mix-04: mix($white-00, $color-05, 10.00%); // dark green
-$light-mix-05: mix($white-00, $color-08, 80.00%); // red
-$light-mix-06: mix($white-00, $color-16, 05.00%); // orange
-$light-mix-07: mix($white-00, $color-13, 05.00%); // red
-$light-mix-08: mix($white-00, $color-18, 05.00%); // purple
-$light-mix-09: mix($white-00, $color-17, 05.00%); // yellow
-
-// Dark Mixes
-// ============================================== //
-
-$dark-mix-01: mix($black-00, $color-01, 50.00%); // very dark blue
-$dark-mix-02: mix($black-00, $color-02, 15.00%); // very dark blue
-$dark-mix-03: mix($black-00, $color-05, 10.00%); // dark green
-$dark-mix-04: mix($black-00, $color-05, 20.00%); // dark green
-$dark-mix-05: mix($black-00, $color-05, 30.00%); // dark green
-$dark-mix-06: mix($black-00, $color-05, 35.00%); // dark green
-$dark-mix-07: mix($black-00, $color-07, 33.33%); // pale yellow
-$dark-mix-08: mix($black-00, $color-10, 40.00%); // gray mix
-$dark-mix-09: mix($black-00, $color-14, 33.33%); // blue
-$dark-mix-10: mix($black-00, $color-14, 50.00%); // blue
-$dark-mix-11: mix($black-00, $color-15, 33.33%); // red
-$dark-mix-12: mix($black-00, $color-15, 50.00%); // red
+$dark-set: (
+	dark-00 : rgba($dark-00, .10), // *** cp avatar shadow, cp ribbon shadow
+	dark-01 : rgba($light-00, .20), // *** main box background
+	dark-02 : rgba($dark-00, .05), // *** cp postbody, attachbox, pre/code, big-column
+	dark-03 : rgba($dark-00, .10), // *** sticky nav shadow
+	dark-04 : rgba($dark-00, .20), // *** avatar shadow, ribbon shadow
+	dark-05 : rgba($dark-00, .30), // *** divider shadow
+	dark-06 : rgba($light-00, .30), // *** main box border
+	dark-07 : rgba($dark-00, .40), // *** stat bar box shadow
+	dark-08 : rgba($dark-00, .75), // *** stat bar text shadow
+	dark-09 : rgba($light-00, .75), // *** darken overlay, discord reactions
+	dark-10 : rgba($light-00, .65), // *** featured overlay, black-bar, banner-content
+	dark-11 : rgba($dark-00, .65), // *** header text shadow
+	dark-12 : rgba($light-00, .65), // *** loading indicator
+	dark-13 : rgba($dark-00, .75) // *** header dark text shadow
+);
