--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_form-fields.scss
@@ -2,12 +2,12 @@
 ============================================== */
 
 @include placeholder {
-	color: $black-01;
+	color: $dark-01;
 	@include transition(color 0.3s ease-in-out);
 }
 
 :focus{@include placeholder {
-	color: $black-01;
+	color: $dark-01;
 }}
 
 fieldset {
@@ -33,7 +33,7 @@ fieldset {
 }
 
 .inputbox, textarea, select {
-	background: $white-04;
+	background: $light-04;
 	color: $color-06;
 	width: 100%;
 	padding: 10px;
@@ -86,14 +86,14 @@ button, html input, option, select, textarea {
 
 button, option {
 	&[disabled] {
-		color: $color-10;
+		color: $color-11;
 	}
 }
 
 html input, select, textarea {
 	&[disabled] {
-		color: $dark-mix-08;
-		background: $color-10;
+		color: map-get($color-set-11, dark-00);
+		background: $color-11;
 	}
 }
 
@@ -112,7 +112,7 @@ input[type='search']::-webkit-search-cancel-button {
 .search-box form fieldset {
 	position: relative;
 	padding: 0 75px 0 0;
-	background: $white-04;
+	background: $light-04;
 	border-radius: 3px;
 	input[type='search'] {
 		margin: 0;
@@ -129,11 +129,11 @@ input[type='search']::-webkit-search-cancel-button {
 			width: auto;
 			font-size: inherit;
 			line-height: 0;
-			color: $color-09;
+			color: $color-10;
 			@include transition(color 0.3s ease-in-out);
 		}
 		&:hover .icon {
-			color: $color-10;
+			color: $color-11;
 		}
 	}
 	button.button {
@@ -147,14 +147,14 @@ input[type='search']::-webkit-search-cancel-button {
 .button, .button1, .button2 {
 	display: inline-block;
 	background: $color-05;
-	color: $white-05;
+	color: $light-05;
 	text-align: center;
 	@include transition(background 0.3s ease-in-out);
 	padding: 10px 20px;
 	&:hover {
 		background: $color-01;
 		&, .icon {
-			color: $white-05;
+			color: $light-05;
 		}
 	}
 }
