--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_layout.scss
@@ -81,7 +81,7 @@
 	@include position($type: fixed, $top: 0, $left: 0, $z: 100);
 	width: 100%;
 	background: $color-07;
-	border-bottom: 2px solid $dark-mix-07;
+	border-bottom: 2px solid map-get($color-set-07, dark-00);
 	padding: 20px;
 	color: $color-06;
 	text-align: center;
@@ -191,13 +191,13 @@
 		}
 		&.cur {
 			background: none;
-			color: $color-03;
+			color: $color-04;
 		}
 	}
 }
 
 #phpbb .mention {
-	color: $color-20;
+	color: $color-17;
 	font-weight: normal;
 }
 
@@ -205,7 +205,7 @@
 ============================================== */
 
 .loading_indicator {
-	background: $dark-rgb-13 url($images + 'loading.gif') center center no-repeat;
+	background: map-get($dark-set, dark-12) url($images + 'loading.gif') center center no-repeat;
 	border-radius: 5px;
 	display: none;
 	margin-top: -50px;
@@ -272,9 +272,9 @@
 ============================================== */
 
 .forabg, .forumbg, .post, .panel {
-	border: 20px solid $dark-rgb-07;
+	border: 20px solid map-get($dark-set, dark-06);
 	.inner {
-		background: $dark-rgb-01;
+		background: map-get($dark-set, dark-01);
 		margin: 1px;
 		padding: 20px 20px 0 20px;
 	}
@@ -562,7 +562,7 @@
 ============================================== */
 
 .caret {
-	border-left: 1px solid $white-05;
+	border-left: 1px solid $light-05;
 	padding: 0 0 0 8px;
 }
 
@@ -679,7 +679,7 @@
 				display: block;
 				white-space: nowrap;
 				padding: 5px 10px;
-				color: $white-05;
+				color: $light-05;
 				background: $color-05;
 				@include transition(background 0.3s ease-in-out);
 				border-radius: 3px 3px 0 0;
@@ -711,11 +711,11 @@
 			@include sizing(16px, 2px);
 		}
 		&:before {
-			border-bottom: 2px solid $white-05;
-			border-top: 2px solid $white-05;
+			border-bottom: 2px solid $light-05;
+			border-top: 2px solid $light-05;
 		}
 		&:after {
-			border-bottom: 2px solid $white-05;
+			border-bottom: 2px solid $light-05;
 		}
 	}
 	.dropdown .dropdown-contents > li > a {
@@ -762,8 +762,8 @@ dl.details {
 .rpg-round-icon, .map-round-icon {
 	@include sizing($list-icon-size - 2px, $list-icon-size - 2px);
 	border-radius: 100%;
-	border: 1px solid $light-mix-01;
-	color: $white-03;
+	border: 1px solid map-get($color-set-01, light-00);
+	color: $light-03;
 }
 
 .rpg-round-icon {
@@ -781,27 +781,27 @@ dl.details {
 
 .rpg-round-icon-green {
 	background: $color-05;
-	border: 1px solid $light-mix-03;
+	border: 1px solid map-get($color-set-05, light-00);
 }
 
 .rpg-round-icon-orange {
-	background: $color-16;
-	border: 1px solid $light-mix-06;
+	background: $color-12;
+	border: 1px solid map-get($color-set-12, light-00);
 }
 
 .rpg-round-icon-purple {
-	background: $color-18;
-	border: 1px solid $light-mix-08;
+	background: $color-15;
+	border: 1px solid map-get($color-set-15, light-00);
 }
 
 .rpg-round-icon-red {
-	background: $color-13;
-	border: 1px solid $light-mix-07;
+	background: $color-08;
+	border: 1px solid map-get($color-set-08, light-00);
 }
 
 .rpg-round-icon-yellow {
-	background: $color-17;
-	border: 1px solid $light-mix-09;
+	background: $color-14;
+	border: 1px solid map-get($color-set-14, light-00);
 }
 
 .map-round-icon {
@@ -831,7 +831,7 @@ dl.details {
 	border: 5px solid $color-01;
 	border-radius: 100%;
 	overflow: hidden;
-	box-shadow: 0 0 10px 5px $dark-rgb-05;
+	box-shadow: 0 0 10px 5px map-get($dark-set, dark-04);
 	img {
 		width: 100%;
 	}
@@ -845,7 +845,7 @@ dl.details {
 }
 
 .pm .postprofile dt.has-avatar .avatar-container > .avatar {
-	box-shadow: 0 0 10px 5px $dark-rgb-00;
+	box-shadow: 0 0 10px 5px map-get($dark-set, dark-00);
 }
 
 /* Positioned Images
