--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
@@ -2043,7 +2043,7 @@
 		}
 		&.sticky {
 			.site-logo-text {
-				border-bottom: 1px solid $dark-mix-01;
+				border-bottom: 1px solid map-get($color-set-01, dark-00);
 				padding-bottom: 10px;
 				margin: 0;
 			}
