--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
@@ -75,10 +75,10 @@
 					text-align: center;
 				}
 				&.fa-exclamation {
-					background: $light-mix-05;
+					background: map-get($color-set-08, light-01);
 				}
 				&.fa-question {
-					background: $light-mix-02;
+					background: map-get($color-set-03, light-00);
 				}
 			}
 			dl {
@@ -159,27 +159,27 @@
 				box-sizing: border-box;
 				line-height: $list-icon-size - 2px;
 				@include icon-font($family: game, $fs: false, $lh: false);
-				color: $white-03;
+				color: $light-03;
 				font-size: rem(24px);
 				text-align: center;
 				background: $color-01;
-				border: 1px solid $light-mix-03;
+				border: 1px solid map-get($color-set-01, light-00);
 				border-radius: 100%;
 			}
 		}
 		&[class*='hot'] dt:before {
-			background: $color-13;
-			border: 1px solid $light-mix-07;
+			background: $color-08;
+			border: 1px solid map-get($color-set-08, light-00);
 		}
 		&[class*='unread'] dt:before {
 			background: $color-05;
-			border: 1px solid $light-mix-03;
+			border: 1px solid map-get($color-set-05, light-00);
 		}
 		&[class*='mine'] dt:after {
 			@include position($type: absolute, $top: 0, $left: 10px, $z: 3);
 			@include icon-font;
 			content: unicode($icon-star);
-			color: $color-11;
+			color: $color-12;
 		}
 	}
 	.forum_link, .topic_moved {
@@ -328,7 +328,7 @@ table {
 .topiclist > li.header, table.table1 thead tr,
 .section-ucp-edit-notification-options .cp-main table.table1 tbody tr.big-column {
 	&, a {
-		color: $white-01;
+		color: $light-01;
 	}
 	a:hover {
 		color: $color-03;
